--- a/dashboardTech.html
+++ b/dashboardTech.html
@@ -69,11 +69,11 @@
         <a href="baseConocimientoTech.html"><img src="img/menu/baseconocimiento_inactive.png" alt=""></a>
         <a href="ticketsDashboardTech.html"><img src="img/menu/tickets_inactive.png" alt=""></a>
         <a href="dashboardTech.html"><img src="img/menu/dashboard_activo.png" alt=""></a>
-        <a href="notificacionesTech.html"><img src="img/menu/notificationes_inactivo.png" alt=""></a>
+        <a href="notificacionesTech.html"><img src="img/menu/notificaciones_inactive.png" alt=""></a>
         <a href="perfilTech.html"><img src="img/menu/perfil_inactive.png" alt=""></a>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
-    <script src="js/dashboardTech.js"></script>
+    <script type="module" src="js/DashboardTech/dashboardTechController/dashboardTechController.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
         crossorigin="anonymous"></script>
