TICKETS CLIENTE TERMINADO GGGGGGGGGGGGS

--- a/TicketInformation.html
+++ b/TicketInformation.html
@@ -72,8 +72,12 @@
                   <div class="Data"><p id="ticket-closed"></p></div>
                 </div>
                 <div class="ContentTicket">
-                  <div class="Headers"><p>Observaciones:</p></div>
-                  <div class="Data"><p id="ticket-observations"></p></div>
+                  <div class="Headers"><p>Prioridad</p></div>
+                  <div class="Data"><p id="ticket-priority"></p></div>
+                </div>
+                <div class="ContentTicket">
+                  <div class="Headers"><p>Imagenes Adjuntas</p></div>
+                  <div class="Data"><p id="ticket-img"></p></div>
                 </div>
               </div>
             </div>
