--- a/perfilTech.html
+++ b/perfilTech.html
@@ -111,7 +111,7 @@
       </header>
       <div class="acciones">
         <button class="cancelar" id="btnCerrarModalLogout">Cancelar</button>
-        <button class="confirmar">Cerrar Sesión</button>
+        <button class="confirmar" id="btnConfirmarLogout">Cerrar Sesión</button>
       </div>
     </article>
   </dialog>
@@ -140,7 +140,7 @@
     <a href="perfilTech.html"><img src="img/menu/perfil_active.png" alt=""></a>
   </div>
 
-  <script src="js/scriptPerfilTech.js"></script>
+  <script type="module" src="js/Usuarios/usuarioController/usuarioTechController.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 
