--- a/ticketsDashboardTech.html
+++ b/ticketsDashboardTech.html
@@ -67,11 +67,11 @@
         <a href="baseConocimiento.html"><img src="img/menu/baseconocimiento_inactive.png" alt=""></a>
         <a href="ticketsDashboardTech.html"><img src="img/menu/tickets_active.png" alt=""></a>
         <a href="dashboardTech.html"><img src="img/menu/dashboard_inactive.png" alt=""></a>
-        <a href="notificacionesTech.html"><img src="img/menu/notificationes_inactivo.png" alt=""></a>
+        <a href="notificacionesTech.html"><img src="img/menu/notificaciones_inactive.png" alt=""></a>
         <a href="perfilTech.html"><img src="img/menu/perfil_inactive.png" alt=""></a>
   </div>
  
-  <script src="js/ticketsDashboardTech.js"></script>
+  <script type="module" src="js/ticketsDashboardTech.js"></script>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 </body>
