--- a/calendarioTech.html
+++ b/calendarioTech.html
@@ -14,11 +14,12 @@
 
 <body>
     <div class="encabezado">
-        <a href="ticketsDashboard.html"><img src="img/flechaIzquierda.png" alt="Flecha" class="flecha"></a>
+        <a href="ticketsDashboardTech.html"><img src="img/flechaIzquierda.png" alt="Flecha" class="flecha"></a>
         <h1>Calendario de tickets</h1>
     </div>
 
     <div class="cal-header">
+        
         <div class="mes">
             <img src="img/previous.png" alt="Anterior" id="prev">
             <h3 id="mes-ano"></h3>
