--- a/ticketsDashboardTech.html
+++ b/ticketsDashboardTech.html
@@ -24,7 +24,7 @@
         </div>
         <div class="col-auto calendar">
 
-          <a href="calendario.html"><img class="calendar" src="img/Calendar.png" alt=""></a>
+          <a href="calendarioTech.html"><img class="calendar" src="img/Calendar.png" alt=""></a>
 
         </div>
       </div>
