--- a/calendarioTech.html
+++ b/calendarioTech.html
@@ -66,6 +66,9 @@
         <a href="perfil.html"><img src="img/menu/perfil_inactive.png" alt=""></a>
     </div>
     <script type="module" src="js/Calendario/calendarioController/calendarioController.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.5.0/sockjs.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
+    <script type="module" src="js/Notificaciones/NotificacionesController/notificacionesController.js"></script>
     <!--<script src="js/scriptCalendario.js"></script>-->
 </body>
 
