--- a/perfilTech.html
+++ b/perfilTech.html
@@ -142,6 +142,9 @@
 
   <script type="module" src="js/Usuarios/usuarioController/usuarioTechController.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.5.0/sockjs.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
+  <script type="module" src="js/Notificaciones/NotificacionesController/notificacionesController.js"></script>
 </body>
 
 </html>
