--- a/TicketInformation.html
+++ b/TicketInformation.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
+    crossorigin="anonymous">
   <link rel="stylesheet" href="css/TicketInformation.css">
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet">
   <title>Informacion del Ticket</title>
 </head>
+
 <body>
   <header>
     <div class="container">
@@ -23,9 +27,9 @@
       </div>
     </div>
   </header>
- 
+
   <div class="imgFondo"></div>
- 
+
   <main>
     <div class="row gx-0">
       <div class="col-12">
@@ -44,67 +48,99 @@
                   <p id="ticket-id"></p>
                 </div>
                 <div class="ticket-status-banner status-pendiente" id="ticket-status"></div>
+              </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
-    <div class="row gx-0">
-      <div class="col-12">
-        <div class="card mx-auto" style="width: 95%;">
-          <div class="card-body">
-            <div class="d-flex flex-wrap align-items-start ticket-row">
-              <div class="ticket-col2">
-                <div class="ContentTicket">
-                  <div class="Headers"><p>Descripcion:</p></div>
-                  <div class="Data"><p id="ticket-description"></p></div>
-                </div>
-                <div class="ContentTicket">
-                  <div class="Headers"><p>Asignado a:</p></div>
-                  <div class="Data"><p id="ticket-assigned-to"></p></div>
-                </div>
-                <div class="ContentTicket">
-                  <div class="Headers"><p>Fecha de creación:</p></div>
-                  <div class="Data"><p id="ticket-created"></p></div>
-                </div>
-                <div class="ContentTicket">
-                  <div class="Headers"><p>Fecha de resolución:</p></div>
-                  <div class="Data"><p id="ticket-closed"></p></div>
-                </div>
-                <div class="ContentTicket">
-                  <div class="Headers"><p>Prioridad</p></div>
-                  <div class="Data"><p id="ticket-priority"></p></div>
-                </div>
-                <div class="ContentTicket">
-                  <div class="Headers"><p>Imagenes Adjuntas</p></div>
-                  <div class="Data"><p id="ticket-img"></p></div>
+      <div class="row gx-0">
+        <div class="col-12">
+          <div class="card mx-auto" style="width: 95%;">
+            <div class="card-body">
+              <div class="d-flex flex-wrap align-items-start ticket-row">
+                <div class="ticket-col2">
+                  <div class="ContentTicket">
+                    <div class="Headers">
+                      <p>Descripcion:</p>
+                    </div>
+                    <div class="Data">
+                      <p id="ticket-description"></p>
+                    </div>
+                  </div>
+                  <div class="ContentTicket">
+                    <div class="Headers">
+                      <p>Asignado a:</p>
+                    </div>
+                    <div class="Data">
+                      <p id="ticket-assigned-to"></p>
+                    </div>
+                  </div>
+                  <div class="ContentTicket">
+                    <div class="Headers">
+                      <p>Fecha de creación:</p>
+                    </div>
+                    <div class="Data">
+                      <p id="ticket-created"></p>
+                    </div>
+                  </div>
+                  <div class="ContentTicket">
+                    <div class="Headers">
+                      <p>Fecha de resolución:</p>
+                    </div>
+                    <div class="Data">
+                      <p id="ticket-closed"></p>
+                    </div>
+                  </div>
+                  <div class="ContentTicket">
+                    <div class="Headers">
+                      <p>Prioridad</p>
+                    </div>
+                    <div class="Data">
+                      <p id="ticket-priority"></p>
+                    </div>
+                  </div>
+                  <div class="ContentTicket">
+                    <div class="Headers">
+                      <p>Imagenes Adjuntas</p>
+                    </div>
+                    <div class="Data">
+                      <p id="ticket-img"></p>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
 
-    <div class="ticket-actions">
-      <button class="btn-edit-ticket">EDITAR TICKET</button>
-      <button class="btn-delete">
-        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="#504c4c" d="M20 6a1 1 0 0 1 .117 1.993L20 8h-.081L19 19a3 3 0 0 1-2.824 2.995L16 22H8c-1.598 0-2.904-1.249-2.992-2.75l-.005-.167L4.08 8H4a1 1 0 0 1-.117-1.993L4 6zm-6-4a2 2 0 0 1 2 2a1 1 0 0 1-1.993.117L14 4h-4l-.007.117A1 1 0 0 1 8 4a2 2 0 0 1 1.85-1.995L10 2z"/></svg>
-      </button>
-    </div>
+      <div class="ticket-actions">
+        <button class="btn-edit-ticket">EDITAR TICKET</button>
+        <button class="btn-delete">
+          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+            <path fill="#504c4c"
+              d="M20 6a1 1 0 0 1 .117 1.993L20 8h-.081L19 19a3 3 0 0 1-2.824 2.995L16 22H8c-1.598 0-2.904-1.249-2.992-2.75l-.005-.167L4.08 8H4a1 1 0 0 1-.117-1.993L4 6zm-6-4a2 2 0 0 1 2 2a1 1 0 0 1-1.993.117L14 4h-4l-.007.117A1 1 0 0 1 8 4a2 2 0 0 1 1.85-1.995L10 2z" />
+          </svg>
+        </button>
+      </div>
 
-    
-    
+
+
   </main>
   <div class="menu">
-        <a href="#"><img src="img/menu/baseconocimiento_inactive.png" alt=""></a>
-        <a href="#"><img src="img/menu/tickets_inactive.png" alt=""></a>
-        <a href="dashboard.html"><img src="img/menu/dashboard_activo.png" alt=""></a>
-        <a href="notificaciones.html"><img src="img/menu/notificaciones_inactive.png" alt=""></a>
-        <a href="perfil.html"><img src="img/menu/perfil_inactive.png" alt=""></a>
-    </div>
- 
-  <script type= "module" src="js/TicketInformation.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+    <a href="#"><img src="img/menu/baseconocimiento_inactive.png" alt=""></a>
+    <a href="#"><img src="img/menu/tickets_inactive.png" alt=""></a>
+    <a href="dashboard.html"><img src="img/menu/dashboard_activo.png" alt=""></a>
+    <a href="notificaciones.html"><img src="img/menu/notificaciones_inactive.png" alt=""></a>
+    <a href="perfil.html"><img src="img/menu/perfil_inactive.png" alt=""></a>
+  </div>
+
+  <script type="module" src="js/TicketInformation.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.5.0/sockjs.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
+  <script type="module" src="js/Notificaciones/NotificacionesController/notificacionesController.js"></script>
 </body>
+
 </html>
