--- a/TicketInformationTech.html
+++ b/TicketInformationTech.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
+    crossorigin="anonymous">
   <link rel="stylesheet" href="css/TicketInformationTech.css">
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet">
   <title>Informacion del Ticket</title>
 </head>
+
 <body>
   <header>
     <div class="container">
@@ -23,9 +27,9 @@
       </div>
     </div>
   </header>
-  
+
   <div class="imgFondo"></div>
-  
+
   <main>
     <div class="row gx-0">
       <div class="col-12">
@@ -57,25 +61,49 @@
             <div class="d-flex flex-wrap align-items-start ticket-row">
               <div class="ticket-col2">
                 <div class="ContentTicket">
-                  <div class="Headers"><p>Descripción:</p></div>
-                  <div class="Data"><p id="ticket-description"></p></div>
+                  <div class="Headers">
+                    <p>Descripción:</p>
+                  </div>
+                  <div class="Data">
+                    <p id="ticket-description"></p>
+                  </div>
                 </div>
                 <div class="ContentTicket">
-                  <div class="Headers"><p>Creado por:</p></div>
-                  <div class="Data"><p id="ticket-creado-por"></p></div> </div>
-                <div class="ContentTicket">
-                  <div class="Headers"><p>Categoría:</p></div>
-                  <div class="Data"><p id="ticket-categoria"></p></div> </div>
-                <div class="ContentTicket">
-                  <div class="Headers"><p>Fecha de creación:</p></div>
-                  <div class="Data"><p id="ticket-created"></p></div>
+                  <div class="Headers">
+                    <p>Creado por:</p>
+                  </div>
+                  <div class="Data">
+                    <p id="ticket-creado-por"></p>
+                  </div>
                 </div>
                 <div class="ContentTicket">
-                  <div class="Headers"><p>Fecha de resolución:</p></div>
-                  <div class="Data"><p id="ticket-closed"></p></div>
+                  <div class="Headers">
+                    <p>Categoría:</p>
+                  </div>
+                  <div class="Data">
+                    <p id="ticket-categoria"></p>
+                  </div>
                 </div>
                 <div class="ContentTicket">
-                  <div class="Headers"><p>Pasos de resolución:</p></div>
+                  <div class="Headers">
+                    <p>Fecha de creación:</p>
+                  </div>
+                  <div class="Data">
+                    <p id="ticket-created"></p>
+                  </div>
+                </div>
+                <div class="ContentTicket">
+                  <div class="Headers">
+                    <p>Fecha de resolución:</p>
+                  </div>
+                  <div class="Data">
+                    <p id="ticket-closed"></p>
+                  </div>
+                </div>
+                <div class="ContentTicket">
+                  <div class="Headers">
+                    <p>Pasos de resolución:</p>
+                  </div>
                   <div class="Data"><input type="text" id="ticket-observations" class="pasos-resolucion-input"></div>
                 </div>
               </div>
@@ -90,14 +118,19 @@
     </div>
   </main>
   <div class="menu">
-        <a href="#"><img src="img/menu/baseconocimiento_inactive.png" alt=""></a>
-        <a href="#"><img src="img/menu/tickets_inactive.png" alt=""></a>
-        <a href="dashboard.html"><img src="img/menu/dashboard_activo.png" alt=""></a>
-        <a href="notificaciones.html"><img src="img/menu/notificationes_inactivo.png" alt=""></a>
-        <a href="perfil.html"><img src="img/menu/perfil_inactive.png" alt=""></a>
-    </div>
-  
+    <a href="#"><img src="img/menu/baseconocimiento_inactive.png" alt=""></a>
+    <a href="#"><img src="img/menu/tickets_inactive.png" alt=""></a>
+    <a href="dashboard.html"><img src="img/menu/dashboard_activo.png" alt=""></a>
+    <a href="notificaciones.html"><img src="img/menu/notificationes_inactivo.png" alt=""></a>
+    <a href="perfil.html"><img src="img/menu/perfil_inactive.png" alt=""></a>
+  </div>
+
   <script src="js/TicketInformationTech.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.5.0/sockjs.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
+  <script type="module" src="js/Notificaciones/NotificacionesController/notificacionesController.js"></script>
 </body>
+
 </html>
