--- a/notificaciones.html
+++ b/notificaciones.html
@@ -37,6 +37,9 @@
     </div>
 
     <script src="js/scriptNotificaciones.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.5.0/sockjs.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
+    <script type="module" src="js/Notificaciones/NotificacionesController/notificacionesController.js"></script>
 </body>
 
 </html>
