--- a/ticketsDashboard.html
+++ b/ticketsDashboard.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
+    crossorigin="anonymous">
   <link rel="stylesheet" href="css/ticketsDashboard.css">
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet">
   <title>Tickets</title>
 </head>
+
 <body>
   <header>
     <div class="container">
@@ -24,29 +28,31 @@
       </div>
     </div>
   </header>
- 
+
   <div class="imgFondo"></div>
- 
+
   <div class="container mt-3">
     <div class="ticketsFilter">
       <div class="row text-center g-0">
         <div class="col"><button class="btn filter-btn btnfilter">Todo</button></div>
-        <div class="col"><button class="btn filter-btn btnfilter">En espera</button></div> 
+        <div class="col"><button class="btn filter-btn btnfilter">En espera</button></div>
         <div class="col"><button class="btn filter-btn btnfilter">En proceso</button></div>
         <div class="col"><button class="btn filter-btn btnfilter">Completado</button></div>
-    </div>
+      </div>
     </div>
   </div>
- 
- <main>
+
+  <main>
     <div class="row">
       <div class="col-auto textTicket">
-        <strong><p>Tickets Pendientes</p></strong>
+        <strong>
+          <p>Tickets Pendientes</p>
+        </strong>
       </div>
     </div>
 
     <div class="row gx-0">
-   
+
       <div id="ticketsContainer" class="col-12"></div>
     </div>
   </main>
@@ -54,15 +60,20 @@
 
 
   <div class="menu">
-        <a href="baseConocimiento.html"><img src="img/menu/baseconocimiento_inactive.png" alt=""></a>
-        <a href="ticketsDashboard.html"><img src="img/menu/tickets_active.png" alt=""></a>
-        <a href="dashboard.html"><img src="img/menu/dashboard_inactive.png" alt=""></a>
-        <a href="notificaciones.html"><img src="img/menu/notificaciones_inactive.png" alt=""></a>
-        <a href="perfil.html"><img src="img/menu/perfil_inactive.png" alt=""></a>
+    <a href="baseConocimiento.html"><img src="img/menu/baseconocimiento_inactive.png" alt=""></a>
+    <a href="ticketsDashboard.html"><img src="img/menu/tickets_active.png" alt=""></a>
+    <a href="dashboard.html"><img src="img/menu/dashboard_inactive.png" alt=""></a>
+    <a href="notificaciones.html"><img src="img/menu/notificaciones_inactive.png" alt=""></a>
+    <a href="perfil.html"><img src="img/menu/perfil_inactive.png" alt=""></a>
   </div>
- 
+
   <script type="module" src="js/ticketsDashboard.js"></script>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.5.0/sockjs.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
+  <script type="module" src="js/Notificaciones/NotificacionesController/notificacionesController.js"></script>
 </body>
+
 </html>
