--- a/ticketsDashboardTech.html
+++ b/ticketsDashboardTech.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
+    crossorigin="anonymous">
 
   <link rel="stylesheet" href="css/ticketsDashboardTech.css">
 
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet">
   <title>Tickets</title>
 </head>
+
 <body>
   <header>
     <div class="container">
@@ -30,9 +34,9 @@
       </div>
     </div>
   </header>
- 
+
   <div class="imgFondo"></div>
- 
+
   <div class="container mt-3">
     <div class="ticketsFilter">
       <div class="row text-center g-0">
@@ -45,14 +49,16 @@
       </div>
     </div>
   </div>
- 
+
   <main>
     <div class="row">
       <div class="col-auto textTicket">
-        <strong><p>Tickets Pendientes</p></strong>
+        <strong>
+          <p>Tickets Pendientes</p>
+        </strong>
       </div>
     </div>
- 
+
     <div class="row gx-0">
       <div class="col-12">
         <div class="card mx-auto" style="width: 97%;">
@@ -64,15 +70,20 @@
 
   <div class="menu">
 
-        <a href="baseConocimiento.html"><img src="img/menu/baseconocimiento_inactive.png" alt=""></a>
-        <a href="ticketsDashboardTech.html"><img src="img/menu/tickets_active.png" alt=""></a>
-        <a href="dashboardTech.html"><img src="img/menu/dashboard_inactive.png" alt=""></a>
-        <a href="notificacionesTech.html"><img src="img/menu/notificaciones_inactive.png" alt=""></a>
-        <a href="perfilTech.html"><img src="img/menu/perfil_inactive.png" alt=""></a>
+    <a href="baseConocimiento.html"><img src="img/menu/baseconocimiento_inactive.png" alt=""></a>
+    <a href="ticketsDashboardTech.html"><img src="img/menu/tickets_active.png" alt=""></a>
+    <a href="dashboardTech.html"><img src="img/menu/dashboard_inactive.png" alt=""></a>
+    <a href="notificacionesTech.html"><img src="img/menu/notificaciones_inactive.png" alt=""></a>
+    <a href="perfilTech.html"><img src="img/menu/perfil_inactive.png" alt=""></a>
   </div>
- 
+
   <script type="module" src="js/ticketsDashboardTech.js"></script>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.5.0/sockjs.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
+  <script type="module" src="js/Notificaciones/NotificacionesController/notificacionesController.js"></script>
 </body>
+
 </html>
