Vista ticket clientes finalizada y tecnicos con asignacion de ticket flexible

--- a/dashboardTech.html
+++ b/dashboardTech.html
@@ -38,13 +38,18 @@
     <div class="white-content-section">
         <div class="d-flex justify-content-between align-items-center ">
             <h4 class="mb-1">Mis tickets</h4>
-            <a href="ticketsDashboardTech.html" class="text-decoration-none text-dark">Todos <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-chevron-right-icon lucide-chevron-right"><path d="m9 18 6-6-6-6"/></svg><i class="bi bi-chevron-right"></i></a>
+            <a href="ticketsDashboardTech.html" class="text-decoration-none text-dark">Todos <svg
+                    xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                    stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"
+                    class="lucide lucide-chevron-right-icon lucide-chevron-right">
+                    <path d="m9 18 6-6-6-6" />
+                </svg><i class="bi bi-chevron-right"></i></a>
         </div>
 
-        
+
     </div>
 
-    
+
 
     <div class="menu">
         <a href="baseConocimientoTech.html"><img src="img/menu/baseconocimiento_inactive.png" alt=""></a>
@@ -54,6 +59,10 @@
         <a href="perfilTech.html"><img src="img/menu/perfil_inactive.png" alt=""></a>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
+
+    <head>
+        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    </head>
     <script type="module" src="js/DashboardTech/dashboardTechController/dashboardTechController.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
