--- a/ticketsDashboardTech.html
+++ b/ticketsDashboardTech.html
@@ -71,7 +71,7 @@
         <a href="perfilTech.html"><img src="img/menu/perfil_inactive.png" alt=""></a>
   </div>
  
-  <script type="module" src="js/ticketsDashboardTech.js"></script>
+  <script type="module" src="js/DashboardTech/dashboardTechController/dashboardTechController.js"></script>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 </body>
