--- a/ticketsDashboard.html
+++ b/ticketsDashboard.html
@@ -61,7 +61,7 @@
         <a href="perfil.html"><img src="img/menu/perfil_inactive.png" alt=""></a>
   </div>
  
-  <script type="module" src="js/ticketsDashboard.js"></script>
+  <script type="module" src="js/vistaDashboard/ticketsDashboard.js"></script>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 </body>
