--- a/perfil.html
+++ b/perfil.html
@@ -34,7 +34,7 @@
     </div>
     <h3 id="nombre"></h3>
     <h5>Cliente</h5>
-    <p>Tickets generados: 9</p>
+    <p id="tickets-generados">Tickets generados: 0</p>
   </div>
   <div class="contenido">
     <div class="tarjeta">
