--- a/ticketsDashboardTech.html
+++ b/ticketsDashboardTech.html
@@ -70,7 +70,7 @@
 
   <div class="menu">
 
-    <a href="baseConocimiento.html"><img src="img/menu/baseconocimiento_inactive.png" alt=""></a>
+    <a href="baseConocimientoTech.html"><img src="img/menu/baseconocimiento_inactive.png" alt=""></a>
     <a href="ticketsDashboardTech.html"><img src="img/menu/tickets_active.png" alt=""></a>
     <a href="dashboardTech.html"><img src="img/menu/dashboard_inactive.png" alt=""></a>
     <a href="notificacionesTech.html"><img src="img/menu/notificaciones_inactive.png" alt=""></a>
