Recuperar contraseña funciona

--- a/inicioSesion.html
+++ b/inicioSesion.html
@@ -28,7 +28,7 @@
 
                     <div class="txtIn">
                         <h5>Ingresar</h5>
-                        <p>Porfavor inicia sesión para continuar</p>
+                        <p>Por favor inicia sesión para continuar</p>
                     </div>
                 </div>
             </div>
@@ -65,7 +65,7 @@
                                 </div>
                                 <div class="col-6 text-end">
                                     <div class="link">
-                                        <a href="#">¿Olvidaste tu contraseña?</a>
+                                        <a href="recuperarContrasena.html">¿Olvidaste tu contraseña?</a>
                                     </div>
                                 </div>
                             </div>
