--- a/perfilTech.html
+++ b/perfilTech.html
@@ -34,7 +34,7 @@
     </div>
     <h3 id="nombre"></h3>
     <h5>Técnico</h5>
-    <p>Tickets solucionados: 9</p>
+    <p id="tickets-solucionados">Tickets solucionados: 0</p>
   </div>
   <div class="contenido">
     <div class="tarjeta">
