--- a/calendario.html
+++ b/calendario.html
@@ -64,6 +64,7 @@
         <a href="notificaciones.html"><img src="img/menu/notificaciones_inactive.png" alt=""></a>
         <a href="perfil.html"><img src="img/menu/perfil_inactive.png" alt=""></a>
     </div>
+    <script src="js/notificacionesCliente.js"></script>
     <script type="module" src="js/Calendario/calendarioController/calendarioController.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.5.0/sockjs.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
