--- a/dashboard.html
+++ b/dashboard.html
@@ -70,6 +70,7 @@
         <a href="notificaciones.html"><img src="img/menu/notificaciones_inactive.png" alt=""></a>
         <a href="perfil.html"><img src="img/menu/perfil_inactive.png" alt=""></a>
     </div>
+    <script src="js/notificacionesCliente.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
     <script type="module" src="js/Dashboard/dashboardController/dashboardController.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
