--- a/perfil.html
+++ b/perfil.html
@@ -140,6 +140,7 @@
     <a href="perfil.html"><img src="img/menu/perfil_active.png" alt=""></a>
   </div>
 
+  <script src="js/notificacionesCliente.js"></script>
   <script type="module" src="js/Usuarios/usuarioController/usuarioController.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.5.0/sockjs.min.js"></script>
