--- a/ticketsDashboard.html
+++ b/ticketsDashboard.html
@@ -69,7 +69,7 @@
 
  
   <script type="module" src="js/vistaDashboard/ticketsDashboard.js"></script>
-
+  <script src="js/notificacionesCliente.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
     crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.5.0/sockjs.min.js"></script>
